# vine

./: AUTHORS  INSTALL  Makefile  Makefile.am  Makefile.in  README  config.status  configure  configure.ac
VEX/: Makefile  VINE.README
VEX/priv/main/: vex_svnversion.h
VEX/pub/: libvex_guest_offsets.h
autom4te.cache/: output.0  traces.0
config/: recursive.mk
doc/: Makefile  install-vine-release.sh
doc/howto/: Makefile  howto.tex  irformulagen.tex  stp.tex  utils.tex  vine-components.eps  vine-il.tex  vine-overview.tex
examples/: five.ir  five.stp  five.trace  five.wp
libasmir/: Makefile  Makefile.am  Makefile.in  config.h  config.h.in  makefile.inc
libasmir/apps/: Makefile  Makefile.am  Makefile.in  disassembler  disassembler.cpp  ir_printer.cpp  ir_printer.h  print-ir.cpp
libasmir/apps/.deps/: disassembler.Po  ir_printer.Po  print-ir.Po
libasmir/src/: Makefile  Makefile.am  Makefile.in
libasmir/src/.deps/: asm_program.Po  debug.Po  exp.Po  exp_c.Po  gen_thunks.Po  irtoir-arm.Po  irtoir-i386.Po  irtoir.Po  irtoir_c.Po  objdump.Po  stmt.Po  stmt_c.Po  translate.Po  vexir.Po  vexmem.Po
libasmir/src/disasm/: asm_program.cpp  asm_program.cpp~  objdump.cpp
libasmir/src/include/: asm_program.h  common.h  debug.h  disasm-pp.h  exp.h  info.h  ir_program.h  irtoir-internal.h  irtoir.h  irvisitor.h  objdump.h  stmt.h  translate.h  vexmem.h
libasmir/src/ir/: exp.cpp  exp_c.cpp  stmt.cpp  stmt_c.cpp  translate.cpp
libasmir/src/util/: debug.cpp
libasmir/src/vex/: gen_thunks.cpp  irtoir-arm.cpp  irtoir-i386.cpp  irtoir.cpp  irtoir_c.cpp  vexir.cpp  vexmem.cpp
ocaml/: Makefile  asmir.cmi  asmir.cmo  asmir.cmx  asmir.ml  asmir.mli  dataflow.cmi  dataflow.cmo  dataflow.cmx  dataflow.ml  dataflow.mli  debug.cmi  debug.cmo  debug.cmx  debug.ml  debug.mli  dominator.cmi  dominator.cmo  dominator.cmx  dominator.ml  gcl.cmi  gcl.cmo  gcl.cmx  gcl.ml  libasmir.cmi  libasmir.cmo  libasmir.cmx  libasmir.h  libasmir.idl  libasmir.mli  libasmir_stubs.c  smt_lib.cmi  smt_lib.cmo  smt_lib.cmx  smt_lib.ml  ssa.cmi  ssa.cmo  ssa.cmx  ssa.ml  ssa.mli  (+134 more)
ocaml/._bcdi/: asmir.di  libasmir.di  ssa.di  vine_ceval.di  vine_cfg.di  vine_eval.di  vine_loop.di  vine_parser.di  vine_util.di  wp.di
ocaml/._d/: asmir.d  dataflow.d  dominator.d  gcl.d  libasmir.d  smt_lib.d  ssa.d  stp.d  symbols.d  to_c.d  vine.d  vine_absyn.d  vine_alias.d  vine_alphavary.d  vine_callgraph.d  vine_ceval.d  vine_cfg.d  vine_dataflow.d  vine_eval.d  vine_grammar.d  vine_graphviz.d  vine_indepclauses.d  vine_inline.d  vine_lexer.d  vine_loop.d  vine_memory2array.d  vine_opt.d  vine_parser.d  vine_pdg.d  vine_slice.d  vine_stpvc.d  vine_typecheck.d  vine_util.d  vsa.d  wp.d
ocaml/._ncdi/: dataflow.di  symbols.di  vine.di  vine_absyn.di  vine_alias.di  vine_alphavary.di  vine_callgraph.di  vine_dataflow.di  vine_grammar.di  vine_stpvc.di  vine_typecheck.di  wp.di
stp/: LICENSE  VINE.README  c_interface.h  stp  stp-vine-20080425.diff
stp/ocaml/: Makefile  OCamlMakefile  libstp.cmi  libstp.cmo  libstp.cmx  libstp.h  libstp.idl  libstp.mli  libstp_regerrorhandler.c  libstp_stubs.c  stpvc.cma  stpvc.cmi  stpvc.cmo  stpvc.cmx  stpvc.cmxa  stpvc.ml  stpvc.mli  stpvc.top
stp/ocaml/._bcdi/: libstp.di
stp/ocaml/._d/: libstp.d  stpvc.d
stp/ocaml/._ncdi/: stpvc.di
trace/: Makefile  exectrace.cmi  exectrace.cmo  exectrace.cmx  exectrace.ml  exectrace.mli  temu_state.cmi  temu_state.cmo  temu_state.cmx  temu_state.ml  temu_state.mli  temu_trace.cmi  temu_trace.cmo  temu_trace.cmx  temu_trace.ml  temu_trace.mli  trace.cmxa
trace/._bcdi/: exectrace.di  temu_trace.di
trace/._d/: exectrace.d  temu_state.d  temu_trace.d
trace/._ncdi/: temu_state.di
trace_utils/: Makefile  appreplay.cmi  appreplay.cmo  appreplay.cmx  appreplay.ml  state_reader  state_reader.cmi  state_reader.cmo  state_reader.cmx  state_reader.dbg  state_reader.ml  trace_reader.cmi  trace_reader.cmo  trace_reader.cmx  trace_reader.ml
trace_utils/._d/: appreplay.d  state_reader.d  trace_reader.d
utils/: Makefile  evaluator  evaluator.cmi  evaluator.cmo  evaluator.cmx  evaluator.dbg  evaluator.ml  irtrans.cmi  irtrans.cmo  irtrans.cmx  irtrans.ml  irutil  irutil.cmi  irutil.cmo  irutil.cmx  irutil.dbg  irutil.ml  wputil  wputil.cmi  wputil.cmo  wputil.cmx  wputil.dbg  wputil.ml
utils/._d/: evaluator.d  irtrans.d  irutil.d  wputil.d
