include @top_srcdir@/config/recursive.mk

EXTRA_DIST=config/recursive.mk \
		m4/*.m4			\
		stp/c_interface.h	\
		stp/i386/libstp.a	\
		stp/i386/stp		\
		stp/x86_64/libstp.a	\
		stp/x86_64/stp		\
		stp/*README*		\
		stp/*.diff		\
		stp/*LICENSE*		\
		examples/five.trace	\
		BITBLAZE-TEAM

SUBDIRS=VEX libasmir stp/ocaml ocaml trace utils trace_utils doc
